--- a/.gitignore
+++ b/.gitignore
@@ -34,12 +34,12 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
-# misc
-db.sqlite
-
 # env
 .env
 .env.test
 .env.local
 .env.production
 .env.development
+
+# Мisc
+db.sqlite
